--- a/css/demo.css
+++ b/css/demo.css
@@ -222,6 +222,15 @@ a:focus {
 	height: 300px;
 }
 
+.content__img-t {
+	grid-column: 1 / 3;
+	grid-row: 1 / 3;
+	opacity: 0.8;
+	width: 30px;
+	height: 30px;
+}
+
+
 .content__title {
 	grid-area: title;
 	font-family: 'nexa_boldregular', sans-serif;
@@ -479,6 +488,16 @@ a:focus {
 	.demos {
 		text-align: center;
 	}
+}
+
+.margin {
+	justify-content: center;
+	align-self: center;
+	padding-top: 25%;
+}
+
+.space {
+	padding: 10% 0 10% 0;
 }
 
 @media screen and (max-width: 40em) {
