--- a/css/demo.css
+++ b/css/demo.css
@@ -224,6 +224,30 @@ a:focus {
 	bottom: 10%;
 	}
 
+	.shuf {
+  background-color: white;
+	border: none;
+  color: #56CCCF;
+  text-align: center;
+  text-decoration: none;
+	height: 40px;
+	width: 100px;
+  font-size: 16px;
+	border-radius: 8px;
+}
+
+.shuf:hover {
+background-color: #E6E948;
+border: none;
+color: white;
+text-align: center;
+text-decoration: none;
+height: 40px;
+width: 100px;
+font-size: 16px;
+border-radius: 8px;
+}
+
 .button {
 	background-color: black;
 	border: 2px green solid;
@@ -303,7 +327,6 @@ a:focus {
 	grid-column: 1 / 3;
 	grid-row: 1 / 3;
 	opacity: 0.8;
-	width: 300px;
 	height: 300px;
 }
 
@@ -328,6 +351,11 @@ a:focus {
 	cursor: default;
 }
 
+#tit {
+	font-size: 8em !important;
+}
+
+
 .content__author {
 	grid-area: author;
 	margin: 0;
@@ -345,6 +373,17 @@ a:focus {
 	z-index: 10;
 	padding: 0 1em;
 	cursor: default;
+}
+.about-t {
+	padding: 0 0.1em;
+}
+
+.about-tt {
+	padding: 0 0.9em;
+}
+
+#creditss {
+	padding: 0 0.9em;
 }
 
 .content__img,
