--- a/css/demo.css
+++ b/css/demo.css
@@ -224,6 +224,28 @@ a:focus {
 	bottom: 10%;
 	}
 
+ .animation {
+	animation-name: appear;
+  animation-duration: 2s;
+ }
+
+ @-webkit-keyframes appear {
+   0%   { opacity: 0; }
+   100% { opacity: 1; }
+ }
+ @-moz-keyframes appear {
+   0%   { opacity: 0; }
+   100% { opacity: 1; }
+ }
+ @-o-keyframes appear {
+   0%   { opacity: 0; }
+   100% { opacity: 1; }
+ }
+ @keyframes appear {
+   0%   { opacity: 0; }
+   100% { opacity: 1; }
+ }
+
 	.shuf {
   background-color: white;
 	border: none;
