--- a/css/landing.css
+++ b/css/landing.css
@@ -298,7 +298,9 @@ body {
   font-size: 26px;
 	border-radius: 9px;
   margin-top: 15%;
-  margin-left: 15%;
+  margin-left: 25%;
+  align-items: center;
+  justify-content: center;
   animation: leaves 1s ease-in-out infinite alternate;
 }
 
